# TREDO

./: .env.example  .gitignore  Cargo.toml  README.md  Update.md  code-backend.md  code.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci-cd.yml  ci.yml
agent/: mod.rs  nethra_agent.rs
agent/core/: agent_core.rs
agents/backend/: skilled_agent.rs  sub_agents.rs
agents/frontend/: Arbitrage.ts  Backtester.ts  Compliance.ts  Nethra.ts  News.ts  Portfolio.ts  Risk.ts  Tantra.ts  Tredo.ts  index.ts  registry.ts  types.ts
agents/prompts/: nethra.txt  news.txt  risk.txt  tredo.txt
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  routes.rs
backend/tests/: tredo_integration.rs
crates/arkm-autotrader/: Cargo.toml
crates/arkm-autotrader/src/: config.rs  loop_engine.rs  regime.rs
crates/arkm-bridge/: Cargo.toml
crates/arkm-bridge/src/: agent_registry.rs  hermes_bridge_agent.rs  lib.rs  memory.rs  rag.rs  redis_bridge.rs
crates/arkm-core/: Cargo.toml
crates/arkm-core/src/: lib.rs  plugin_registry.rs  provider.rs  types.rs
crates/arkm-data/: Cargo.toml
crates/arkm-data/src/: lib.rs  yahoo.rs
crates/arkm-exchange/: Cargo.toml
crates/arkm-exchange/src/: binance.rs  kucoin.rs  lib.rs
crates/arkm-execution/: Cargo.toml
crates/arkm-execution/src/: backtest.rs  engine.rs  lib.rs
crates/arkm-intelligence/: Cargo.toml
crates/arkm-intelligence/src/: gemini_llm.rs  lib.rs
crates/arkm-journal/: Cargo.toml
crates/arkm-journal/src/: lib.rs
crates/arkm-learning/: Cargo.toml
crates/arkm-learning/src/: lib.rs
crates/arkm-skills/: Cargo.toml
crates/arkm-skills/src/: advanced_technical.rs  lib.rs  portfolio.rs  risk.rs  skilled_agent.rs  sub_agents.rs  technical.rs
crates/arkm-stream/: Cargo.toml
crates/arkm-stream/src/: lib.rs
crates/arkm-tantra/: Cargo.toml
crates/arkm-tantra/src/: lib.rs
crates/arkm-types/: Cargo.toml
crates/tredo-autotrader/: Cargo.toml
crates/tredo-autotrader/src/: config.rs  lib.rs  loop_engine.rs  regime.rs
crates/tredo-bridge/: Cargo.toml
crates/tredo-bridge/src/: agent_registry.rs  cache.rs  lib.rs  memory.rs  nethra_bridge_agent.rs  rag.rs  redis_bridge.rs
crates/tredo-core/: Cargo.toml
crates/tredo-core/src/: lib.rs  plugin_registry.rs  provider.rs  types.rs
crates/tredo-data/: Cargo.toml
crates/tredo-data/src/: lib.rs  yahoo.rs
crates/tredo-exchange/: Cargo.toml
crates/tredo-exchange/src/: binance.rs  kucoin.rs  lib.rs
crates/tredo-execution/: Cargo.toml
crates/tredo-execution/src/: backtest.rs  engine.rs  lib.rs
crates/tredo-intelligence/: Cargo.toml
crates/tredo-intelligence/src/: gemini_llm.rs  lib.rs  ollama_llm.rs
crates/tredo-journal/: Cargo.toml
crates/tredo-journal/src/: lib.rs
crates/tredo-learning/: Cargo.toml
crates/tredo-learning/src/: lib.rs
crates/tredo-mcp/: Cargo.toml
crates/tredo-mcp/src/: lib.rs
crates/tredo-skills/: Cargo.toml
crates/tredo-skills/src/: advanced_technical.rs  lib.rs  portfolio.rs  risk.rs  skilled_agent.rs  sub_agents.rs  technical.rs
crates/tredo-stream/: Cargo.toml
crates/tredo-stream/src/: lib.rs
crates/tredo-swarm/: Cargo.toml
crates/tredo-swarm/src/: bot.rs  coordinator.rs  lib.rs  swarm.rs
crates/tredo-tantra/: Cargo.toml
crates/tredo-tantra/src/: lib.rs
crates/tredo-types/: Cargo.toml
crates/tredo-types/src/: lib.rs
deployment/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
deployment/prometheus/: prometheus.yml
frontend/: capacitor.config.json  index.html  main-electron.cjs  package.json  preload.js  tailwind.config.ts  test_tredo.cjs  vite.config.ts
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/arkm/cockpit/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: agents
frontend/src/app/: App.tsx  Journal.tsx  Settings.tsx  fix_lightweight_charts.py  index.css  main.tsx  upgrade_tredo.py  upgrade_tredo_module.py
frontend/src/atoms/: state.ts
frontend/src/components/chat/: ChatModule.tsx
frontend/src/components/layout/: Header.tsx  Navigation.tsx
frontend/src/components/settings/: JournalSection.tsx
frontend/src/components/tantra/: TantraModule.tsx
frontend/src/components/tredo/: TredoModule.tsx
frontend/src/components/ui/: Badge.tsx  LoadingSpinner.tsx  States.tsx  Toast.tsx
frontend/src/hooks/: useApiFetch.ts  useKeyboardShortcuts.ts  useToast.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/test/: TredoModule.test.tsx  setup.ts
protocols/borsh/: alert.borsh  orderbook.borsh  trade.borsh
protocols/ts/: index.ts
scripts/: start-production.sh
