[package]
name = "tredo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tredo-server"
path = "src/main.rs"

[lib]
name = "tredo_server"
path = "src/lib.rs"

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tower = "0.4"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { workspace = true }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }

rmcp = { version = "1.7", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }

# Internal crates
tredo-core      = { path = "../crates/tredo-core" }
tredo-types      = { path = "../crates/tredo-types" }
tredo-execution  = { path = "../crates/tredo-execution" }
tredo-intelligence = { path = "../crates/tredo-intelligence" }
tredo-exchange   = { path = "../crates/tredo-exchange" }
tredo-tantra     = { path = "../crates/tredo-tantra" }
tredo-skills     = { path = "../crates/tredo-skills" }
tredo-data       = { path = "../crates/tredo-data" }
tredo-journal    = { path = "../crates/tredo-journal" }
tredo-autotrader = { path = "../crates/tredo-autotrader" }
tredo-stream    = { path = "../crates/tredo-stream" }
tredo-mcp       = { path = "../crates/tredo-mcp" }
tredo-learning  = { path = "../crates/tredo-learning" }
tredo-bridge    = { path = "../crates/tredo-bridge" }
tredo-swarm     = { path = "../crates/tredo-swarm" }
