[package]
name = "arkm-autotrader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
arkm-core = { path = "../arkm-core" }
arkm-data = { path = "../arkm-data" }
arkm-journal = { path = "../arkm-journal" }
arkm-types = { path = "../arkm-types" }
arkm-learning = { path = "../arkm-learning" }
