[package]
name = "arkm-bridge"
version = "0.1.0"
edition = "2021"
description = "Hybrid Python-Rust bridge: Redis pub/sub, hierarchical RAG, shared memory, sub-agent communication"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Redis bridge
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "json"] }

# SQLite (L2 warm storage)
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }

# Postgres (L3 cold storage) — disabled for now; use rusqlite bundled to avoid links conflict
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Core types (AgentProvider, etc.)
arkm-core = { path = "../arkm-core" }

# Logging
log = "0.4"
tracing = "0.1"

# Memory tracking
procfs = { version = "0.16", optional = true }

# Async helpers
async-trait = "0.1"
futures = "0.3"

[features]
default = ["procfs"]
memory_tracking = ["procfs"]
