[package]
name = "arkm-exchange"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
dashmap = { workspace = true }
arkm-types = { path = "../arkm-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
