[package]
name = "arkm-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
arkm-core = { path = "../arkm-core" }
arkm-types = { path = "../arkm-types" }
arkm-skills = { path = "../arkm-skills" }
