[package]
name = "arkm-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["sync", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
arkm-types = { path = "../arkm-types" }
arkm-skills = { path = "../arkm-skills" }
