[package]
name = "tredo-core"
version = "1.0.0"
edition = "2021"

[dependencies]
tredo-types = { path = "../tredo-types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures = "0.3"
