[package]
name = "tredo-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tredo-core = { path = "../tredo-core" }
tredo-types = { path = "../tredo-types" }
tredo-skills = { path = "../tredo-skills" }
